--- a/css/styles.css
+++ b/css/styles.css
@@ -8,12 +8,22 @@ body {
 .footer {
     background-color: rgb(233, 228, 159);
 }
-.jumbotron1 {
-    background-color: rgb(212, 230, 115);
+.jumbotron1, h1 {
+    background-color: rgb(65, 66, 61);
     border-style: dotted;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-style: italic;
+    padding: 10px;
+    color: white;
+    text-align: center;
 }
 .jumbotron2 {
-    text-align: center;
-    background-color: rgb(214, 214, 214);
+    text-align: left;
+    background-color: rgb(168, 18, 18);
+    padding: 80px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serifs;
+    color: rgb(52, 245, 52);
+    font-size: 18px;
+    font-style: oblique;
+  
 }
