--- a/css/styles.css
+++ b/css/styles.css
@@ -18,12 +18,14 @@ body {
     text-align: center;
 }
 .jumbotron2 {
-    text-align: left;
+    text-align: center;
     background-color: rgb(168, 18, 18);
-    padding: 80px;
+    padding: 70px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serifs;
     color: rgb(52, 245, 52);
     font-size: 18px;
     font-style: oblique;
+    font-weight: 530;
   
+  margin: auto;
 }
