--- a/css/styles.css
+++ b/css/styles.css
@@ -14,18 +14,23 @@ body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-style: italic;
     padding: 10px;
-    color: white;
+    color: rgb(241, 238, 43);
     text-align: center;
+    font-size: 19px;
 }
 .jumbotron2 {
-    text-align: center;
-    background-color: rgb(168, 18, 18);
+    text-align:left;
+    background-color: rgba(184, 15, 15, 0.884);
     padding: 70px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serifs;
     color: rgb(52, 245, 52);
     font-size: 18px;
     font-style: oblique;
     font-weight: 530;
-  
-  margin: auto;
+    margin: auto;
+}
+.card-body {
+    color: rgb(12, 6, 6);
+   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+   font-size: 20px;
 }
